--- a/hospital.html
+++ b/hospital.html
@@ -22,7 +22,7 @@
   <div class="container">
     <!-- Logo -->
     <a class="navbar-brand" href="#">
-      <img src="/images/medGlob-logo.svg" alt="Logo" height="40%">
+      <img src="images/medGlob-logo.svg" alt="Logo" height="40%">
     </a>
 
     <!-- Toggler -->
