--- a/doctors.html
+++ b/doctors.html
@@ -22,7 +22,7 @@
   <div class="container">
     <!-- Logo -->
     <a class="navbar-brand" href="#">
-      <img src="/images/medGlob-logo.svg" alt="Logo" height="40%">
+      <img src="images/medGlob-logo.svg" alt="Logo" height="40%">
     </a>
 
     <!-- Toggler -->
@@ -130,7 +130,7 @@
     </section>
 
     <!-- Filter Section -->
-    <section class="filter-section">
+    <!-- <section class="filter-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
    <section class="py-4">
   <div class="container">
