--- a/hospital.html
+++ b/hospital.html
@@ -138,7 +138,7 @@
     </section>
 
     <!-- Filter Section -->
-    <section class="filter-section">
+    <!-- <section class="filter-section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Hospital Listing -->
     <section class="py-4">
